--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,7 +31,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="Quien-Soy.html">Quien Soy</a>
+          <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " aria-current="page" href="Quien-Soy.html">Quien Soy</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Mis-servicios.html">Servicios</a>
