subida de pagina de error 404

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -27,7 +27,7 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <h2>"Ejerzo el derecho del trabajo. Conozco sus problemas y sus soluciones."</h2>
+      <h1>"Ejerzo el derecho del trabajo. Conozco sus problemas y sus soluciones."</h1>
     </div>
     <div class="carousel-item">
       <h2>"Sólida formación integral en todos los campos del derecho, férrea capacidad de servicio, entereza y valores morales, y responsabilidad."</h2>
