--- a/pages/Mis-servicios.html
+++ b/pages/Mis-servicios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,10 +12,7 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-	<script src="../js/wow.min.js"></script>
-              <script>
-              new WOW().init();
-              </script>
+
    <link rel="stylesheet" href="../css/style.css">
 
 	<title>Asesoramiento Juridico Integral Cordoba Capital - Lucas Suaste/Mis Servicios</title>
@@ -98,13 +95,15 @@
 			<h3 class="text-center">2022-Copyright-Todos los derechos de autor reservados</h3>
 		</div>
 	</footer>
-	</div>
+	
 	
 
+<!-- scrip wow -->
 
-
-
-
+<script src="../js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
 <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
  </body>
