arreglo de errores

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -76,7 +76,7 @@
     <textarea name="mensaje" id="mensaje" placeholder="Mensaje" class=" bordesImg w-100"></textarea>
   </div>
   <div class="col-sm-1 col-md-1 ">
-    <button type="submit" class="btn btnEnviar"><a href="error-404.html">Enviar</a></button>
+    <button type="" class="btn btnEnviar"><a href="error-404.html">Enviar</a></button>
   </div>
   <div class="col-sm-1 col-md-1">
     <button type="reset" class="btn  btnCancelar">Cancelar</button>
